Make columns shrink equally/make sure they are equal width even on narrow screens, by giving them all the same basis and a small definite width so they grow instead of shrink.
See https://css-tricks.com/equal-columns-with-flexbox-its-more-complicated-than-you-might-think/

"flex-shrink is a ratio. If everything has the same flex-shrink (which is 1 by default), they all shrink at the same rate. That doesnt mean they all shrink to the same size or by the same amount, but they all shrink at the same rate."

fixup

--- a/main.sass
+++ b/main.sass
@@ -130,6 +130,7 @@ ul
     > *
         flex: 1
         max-height: 100%
+        width: 100px
 
 .scrollParent
     display: flex
